--- a/src/embla.css
+++ b/src/embla.css
@@ -3,6 +3,7 @@
   margin: auto;
   --slide-spacing: 1rem;
   --slide-size: 75%;
+  border-bottom: 2px solid rgb(144, 144, 144);
 }
 .embla__viewport {
   overflow: hidden;
@@ -13,6 +14,7 @@
   touch-action: pan-y pinch-zoom;
   margin-left: calc(var(--slide-spacing) * -1);
   margin: 25px;
+  height: 500px;
 }
 .embla__slide {
   transform: translate3d(0, 0, 0);
