--- a/src/home.module.css
+++ b/src/home.module.css
@@ -12,15 +12,52 @@
     font-weight: 900;
     font-family: "Oswald";
     font-size: large;
+    position: sticky;
+    top:93px;
+    z-index: 1000;
 }
 
-h1{
+h1 {
     font-family: "Oswald";
 }
-.ad_div{
+
+.ad_div {
     height: 600px;
 }
-.ad_div>img{
-border-radius: 10px;
-overflow-x: scroll;
+
+.ad_div>img {
+    border-radius: 10px;
+    overflow-x: scroll;
+}
+
+.carousel_section {
+    position: relative;
+}
+
+.shop_now {
+    background-color: #fc80a5;
+    font-size: 75px;
+    font-family: 'Times New Roman', Times, serif;
+    position: absolute;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
+    top: 50%;
+    height: fit-content;
+    width: fit-content;
+    margin-inline: auto;
+    color: black;
+    border-radius: 10px;
+    z-index: 1000;
+    cursor: pointer;
+    text-decoration: none;
+    padding: 10px;
+    border: 2px solid black;
+    font-weight: 100;
+    box-shadow: 0px 0px 10px 5px black ;
+    transition: background-color 0.2s ease-in-out;
+}
+
+.shop_now:hover{
+background-color: #ffa8c2;
 }
