--- a/src/page.css
+++ b/src/page.css
@@ -34,3 +34,11 @@ header {
   align-items: center;
   font-weight: 100;
 }
+
+footer{
+  background-color: #fc80a5;
+  font-size: larger;
+  padding-bottom: 1rem;
+  text-align: center;
+  font-family: sans-serif;
+}
