--- a/src/home.module.css
+++ b/src/home.module.css
@@ -34,6 +34,10 @@ h1 {
     position: relative;
 }
 
+.separator{
+     border-bottom: 2px solid rgb(144, 144, 144);
+}
+
 .shop_now {
     background-color: #fc80a5;
     font-size: 75px;
